# dvclearn

./: .gitignore  README.md  pyproject.toml
.dvc/: config
data/raw/: train.csv.dvc
dvclive/: metrics.json  params.yaml
dvclive/plots/metrics/: precision_1.tsv  recall_0.tsv
notebooks/: training.ipynb
notebooks/dvclive/plots/metrics/: accuracy.tsv  f1_0.tsv  f1_1.tsv  precision_0.tsv  recall_1.tsv
src/: train_with_dvclive.py
